--- a/css/home.css
+++ b/css/home.css
@@ -1,15 +1,19 @@
+
+
+
+
 #title {
-    padding: 100px 0 140px;
+    padding: 80px 0 120px;
     font-family: 'Open Sans', sans-serif;
     background: whitesmoke;
 }
 
 #title h1 {
-    font-size: 3.0em;
+    font-size: 2.5em;
     color: #282828;
     text-transform: uppercase;
     letter-spacing: 8px;
-    margin-top: 30px;
+    margin-top: 60px;
     margin-bottom: 15px;
 }
 
@@ -26,9 +30,40 @@
     line-height: 1.4em;
     font-weight: 300;
 }
-
+/*
 #intro img {
     max-width: 40em;
     max-height: 60em;
-    border: .50em solid #2d2d2d;
+    border: .55em solid #2d2d2d;
+}*/
+
+.img-responsive {
+    display: block;
+    height: auto;
+    max-width: 100%;
+    border: .45em solid #2d2d2d;
 }
+
+/* Desktop navigation */
+
+.navbar .nav,
+.navbar .nav > li {
+    float: none;
+    display: inline-block;
+    *display:inline;
+    *zoom:1;
+    vertical-align: top;
+}
+
+.navbar-inner {
+    text-align: center;
+}
+/*
+.navbar .navbar {
+    display: inline-block;
+    float: none;
+}
+
+.navabar .navbar-collapse {
+    text-align: center;
+    }*/
