--- a/css/home.css
+++ b/css/home.css
@@ -1569,7 +1569,7 @@
 
 .small-nav {
     display: none;
-    background: rgba(1, 1, 1, 0.2);
+    background: rgba(1, 1, 1, 0.5);
     width: 100%;
     z-index: 99999;
     position: fixed;
@@ -1585,7 +1585,8 @@
     display: inline-block;
     text-transform: none;
     padding: 10px 8px;
-    font-size: 15px;
+    font-size: 17px;
+    font-weight: 40;
     font-family: Papyrus, fantasy;
 }
 
@@ -1670,6 +1671,7 @@
     color: white;
     margin-top: 57px;
     padding-left: 1em;
+    font-family: Papyrus, fantasy;
     animation-delay: 0.7s;
     -webkit-animation-delay: 0.7s;
     -moz-animation-delay: 0.7s;
@@ -1687,6 +1689,7 @@
     color: white;
     font-size: 1.5em;
     text-shadow: 4px 4px 10px #3B3B3B;
+    font-family: Papyrus, fantasy;
     font-weight: 650;
     letter-spacing: 0.3em;
     margin-top: 1.2em;
@@ -1740,12 +1743,24 @@
 
 #about {
     padding: 100px 0 140px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Papyrus, fantasy;
     background: whitesmoke;
 }
 
 #about h1 {
     font-size: 2em;
+    color: #282828;
+    font-family: Papyrus, fantasy;
+    font-style: italic;
+    font-weight: 300;
+    text-transform: none;
+    letter-spacing: 4px;
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+
+#about h3 {
+    font-size: 1.5em;
     color: #282828;
     font-family: Papyrus, fantasy;
     font-style: italic;
@@ -1790,10 +1805,12 @@
 #about p {
     color: #666666;
     margin: 0 auto;
-    font-size: 1.25em;
+    font-size: 1.15em;
     letter-spacing: 0.03em;
     line-height: 1.4em;
     font-weight: 300;
+    max-width: 40em;
+    text-align: center;
 }
 
 #about img {
@@ -1887,7 +1904,7 @@
     max-width: 380px;
     padding-top: 10px;
     padding-bottom: 10px;
-    font-size: 1.4em;
+    font-size: 1.1em;
     letter-spacing: 1px;
     font-weight: 300;
     /*font-size: 15px;*/
@@ -1906,7 +1923,6 @@
     position: relative;
     border-color: whitesmoke;
     background: whitesmoke;
-    color: gray;
     text-align: center;
 }
 
@@ -1930,12 +1946,35 @@
 }
 
 #contact p {
-    font-size: 1.1em;
+    font-size: 1.15em;
     font-weight: 300;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
     margin: 30px auto 35px;
     line-height: 25px;
     max-width: 500px;
+    color: #666666;
+    text-transform: none;
+    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+}
+
+#contact h3 {
+    color: #666666;
+    font-size: 1.15em;
+    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-style: none;
+    font-weight: 300;
+    text-transform: none;
+    letter-spacing: 1px;
+    margin: 10px 0 20px;
+}
+
+#contact a {
+    font-size: 1em;
+    font-weight: 300;
+    letter-spacing: 1px;
+    color: #666666;
+    text-transform: none;
+    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
 }
 
 #contact a.contact {
@@ -1945,7 +1984,7 @@
     font-size: 1.4em;
     font-weight: 300;
     letter-spacing: 1px;
-    color: #6c6c6c;
+    color: #282828;
 }
 
 #contact a.contact i {
@@ -1953,10 +1992,8 @@
     font-size: 20px;
 }
 
-#contact a.contact:hover {
-    color: #0099ff;
-    background: #3c3838;
-    border: 1px solid gray;
+#contact a:hover {
+    color: #282828;
 }
 
 #footer {
