--- a/css/home.css
+++ b/css/home.css
@@ -1841,15 +1841,9 @@
     left: 0;
     width: 100%;
     height: 100%;
+    padding: 2.5px;
+    border: .20em solid #2d2d2d;
 }
-
-
-/* commented the below out in the event that I need to add any a elements to about */
-
-
-/*#about .resume {font-size: 2.5em; display: inline-block; min-width: 50px; min-height: 75px; margin: 0 30px; margin-top: 15px ;padding: 0 30px; position: relative; list-style: none;}
-#about .resume a {border-bottom: none; color: #7c8184;}
-#about .resume:hover a {color: #000000; }*/
 
 #interests {
     padding-top: 70px;
