--- a/css/home.css
+++ b/css/home.css
@@ -1751,7 +1751,7 @@
 }
 
 #story h1 {
-    font-size: 2em;
+    font-size: 2.25em;
     color: #282828;
     font-family: Papyrus, fantasy;
     font-style: italic;
@@ -1883,7 +1883,7 @@
 
 #wedding h1 {
     margin-bottom: 35px;
-    font-size: 2em;
+    font-size: 2.25em;
     font-weight: 300;
     letter-spacing: 4px;
     color: #282828;
@@ -1968,7 +1968,7 @@
 
 #travel h1 {
     color: #282828;
-    font-size: 2em;
+    font-size: 2.25em;
     font-family: Papyrus, fantasy;
     font-style: italic;
     font-weight: 300;
@@ -1989,15 +1989,15 @@
     line-height: 25px;
     color: #666666;
     text-transform: none;
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-family: Papyrus, fantasy;
 }
 
 #travel h3 {
     color: #666666;
-    font-size: 1.15em;
+    font-size: 1.25em;
     font-family: Copperplate, "Copperplate Gothic Light", fantasy;
     font-style: none;
-    font-weight: 300;
+    font-weight: 400;
     text-transform: none;
     letter-spacing: 1px;
     margin: 10px 0 20px;
@@ -2010,7 +2010,7 @@
     letter-spacing: 1px;
     color: #666666;
     text-transform: none;
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-family: Papyrus, fantasy;
 }
 
 #travel a.travel {
@@ -2028,6 +2028,11 @@
     font-size: 20px;
 }
 
+/*For the bed icon*/
+#travel p a i {
+    font-size: 2.2em;
+}
+
 #travel a:hover {
     color: #282828;
 }
@@ -2041,7 +2046,7 @@
 
 #footer h1 {
     color: #282828;
-    font-size: 2em;
+    font-size: 2.25em;
     font-family: Papyrus, fantasy;
     font-style: italic;
     font-weight: 300;
