--- a/css/home.css
+++ b/css/home.css
@@ -2044,6 +2044,17 @@
     font-weight: 300;
 }
 
+#footer p {
+    font-size: 1.15em;
+    font-weight: 300;
+    letter-spacing: 0.5px;
+    margin: 30px auto 35px;
+    line-height: 25px;
+    color: #666666;
+    text-transform: none;
+    font-family: Papyrus, fantasy;
+}
+
 #footer h1 {
     color: #282828;
     font-size: 2.25em;
@@ -2054,6 +2065,17 @@
     letter-spacing: 4px;
     margin: 10px 0 20px;
     margin-top: -25px;
+}
+#footer h3 {
+    color: #666666;
+    font-size: 1.25em;
+    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-style: none;
+    font-weight: 400;
+    text-transform: none;
+    letter-spacing: 1px;
+    margin: 10px 0 20px;
+    text-align: center;
 }
 
 #footer h4 {
@@ -2071,6 +2093,28 @@
     margin: 0 10px;
     padding: 0 10px;
     position: relative;
+}
+#footer a {
+    font-size: 1em;
+    font-weight: 300;
+    letter-spacing: 1px;
+    color: #666666;
+    text-transform: none;
+    font-family: Papyrus, fantasy;
+}
+
+#footer a.footer i {
+    margin-left: 10px;
+    font-size: 20px;
+}
+
+/*For the envelope icon*/
+#footer p a i {
+    font-size: 2.2em;
+}
+
+#footer a:hover {
+    color: #282828;
 }
 
 
